--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,15 +7,15 @@
 </ion-header>
 
 <ion-content>
-  <ion-card (click)="goToBlog(index)" *ngFor="let blog of blogs; let index = index; trackBy: blogTracker">
-    <img [src]="blog.mainImg">
+  <ion-card (click)="goToArticle(index)" *ngFor="let article of articles; let index = index; trackBy: articleTracker">
+    <img [src]="article.mainImg">
     <ion-card-header>
       <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-      <ion-card-title>{{blog.title}}</ion-card-title>
+      <ion-card-title>{{article.title}}</ion-card-title>
     </ion-card-header>
     
     <ion-card-content>
-      {{blog.contentPreview}}
+      {{article.contentPreview}}
     </ion-card-content>
   </ion-card>
 </ion-content>
