--- a/src/app/components/article-detail/article-detail.component.html
+++ b/src/app/components/article-detail/article-detail.component.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-img [src]="article?.mainImg" alt=""></ion-img>
   <div class="content-wrapper">
-      <span>Escrito por: <b>{{article?.wroteBy}}</b></span>
+      <span>Escrito por: <b>{{article?.writtenBy}}</b></span>
     <p>{{article?.content}}</p>
   </div>
 </ion-content>
