--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,1 +1,19 @@
+.profile {
+    &--content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100%;
+    }
 
+
+    &__image {
+        border-radius: 50%;
+        height: 150px;
+        width: 150px;
+        overflow: hidden;
+        background-size: cover;
+        background-position: center;
+    }
+}
