--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,7 +12,7 @@
       <ion-input type="text" placeholder="Título" formControlName="title"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="text" placeholder="Imágen principal" formControlName="mainImg"></ion-input>
+      <ion-input accept="image/*" type="file" formControlName="mainImg"></ion-input>
     </ion-item>
     <ion-item>
       <ion-input type="text" placeholder="Escrito por" formControlName="writtenBy"></ion-input>
