--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card (click)="goToArticle(index)" *ngFor="let article of articles; let index = index; trackBy: articleTracker">
+  <ion-card (click)="goToArticle(article.id)" *ngFor="let article of articles; let index = index; trackBy: articleTracker">
     <img [src]="article.mainImg">
     <ion-card-header>
       <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
